fixes so  no longer needs the possibility of null and restyle reflects vertext changes and readability

--- a/src/components/_RelatedEdgesDetailsStyle.css
+++ b/src/components/_RelatedEdgesDetailsStyle.css
@@ -16,17 +16,20 @@
   border-radius: 0.5rem;
   transform: translateX(5rem);
   backdrop-filter: blur(0.5rem);
-  background-color: rgba(var(--sketch-bg), 0.25);
 }
 
 #edges-info {
   display: flex;
   flex-direction: column;
-  max-height: 7rem;
+  max-height: 7.25rem;
   padding: 0.5rem 0.75rem;
   overflow-y: auto;
+  max-width: 38rem;
   scrollbar-color: rgba(var(--font), 25%) transparent;
   transition: scrollbar-color 0.2s ease-in-out;
+  border-radius: 0.5rem;
+  border-color: rgba(var(--font), 0.1);
+  border-style: solid;
 }
 
 #edges-info:not(:hover) {
